err/cellnopt.data.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cellnopt'...
Listing './lib/python3.5/site-packages/cellnopt/data'...
Compiling './lib/python3.5/site-packages/cellnopt/data/cnodata.py'...
***   File "./lib/python3.5/site-packages/cellnopt/data/cnodata.py", line 57
    print k
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cellnopt.data-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-3.1.0.dist-info'...
Listing './lib/python3.5/site-packages/data'...
Compiling './lib/python3.5/site-packages/data/cnodata.py'...
***   File "./lib/python3.5/site-packages/data/cnodata.py", line 57
    print k
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easydev'...
Listing './lib/python3.5/site-packages/easydev/share'...
Compiling './lib/python3.5/site-packages/easydev/share/__init__.py'...
Listing './lib/python3.5/site-packages/easydev/share/themes'...
Listing './lib/python3.5/site-packages/easydev/share/themes/cno'...
Listing './lib/python3.5/site-packages/easydev/share/themes/cno/static'...
Listing './lib/python3.5/site-packages/easydev/share/themes/standard'...
Listing './lib/python3.5/site-packages/easydev/share/themes/standard/static'...
Listing './lib/python3.5/site-packages/easydev-0.9.36.egg-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/data'...
Listing './share/data/EGFR-ErbB_PCB2009'...
Listing './share/data/ExtLiverBMC2012'...
Listing './share/data/ExtLiverPCB'...
Compiling './share/data/ExtLiverPCB/aliases.py'...
Listing './share/data/ExtLiverPriHu-MCP2010'...
Listing './share/data/HepG2'...
Listing './share/data/LiverDREAM'...
Compiling './share/data/LiverDREAM/aliases.py'...
Listing './share/data/LiverDREAM_Subnetwork_AddFeedback'...
Listing './share/data/LiverMSB2009'...
Listing './share/data/TCellPCB2007'...
Listing './share/data/ToyMMB'...
Compiling './share/data/ToyMMB/aliases.py'...
Listing './share/data/ToyMMB_Feedback'...
Listing './share/data/ToyMMB_FeedbackAnd'...
Listing './share/data/ToyMMB_T2'...
Compiling './share/data/ToyMMB_T2/aliases.py'...
Listing './share/data/ToyMMB_bis'...
Compiling './share/data/ToyMMB_bis/description.py'...
Listing './share/data/ToyMSB'...
Listing './share/data/ToyMSB2009'...
Listing './share/data/ToyPB'...
Listing './share/data/ToyPCB'...
Listing './share/python-wheels'...
